/***************************************************************************************************
 * The Snake Game - Jörmungandr
 * File: {@code SnakeDirection.java}
 * Members: Michal Spano, Malte Bengtsson, Simone Graziosi, Feride Hansson, Anna Mäkinen, Katinka Romanus
 * For DIT094 Mini Project: Team Programming; SEM@GU.
 ***************************************************************************************************/

package com.example.snakegame.snake;

/**
 * The enum Snake direction.
 */
public enum SnakeDirection {
    LEFT, RIGHT, UP, DOWN
}